--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,9 +1,8 @@
-
 name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   
 jobs:
   build:
@@ -13,8 +12,8 @@ jobs:
     - uses: actions/checkout@v2
   - name: Install dependencies
     run: /
-      python -m pip install --upgrade zip
-      if [ -f requirements.txt ]; tehn pip install -r requirements.txt; fi
+      python -m pip install --upgrade pip
+      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   - name: Test selenium
     run: /
       python manage.py test
