--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,8 +1,8 @@
 name: Python application
 
-on:
-  push:
-    branches: [ main ]
+on: push
+# :
+    # branches: [ main ]
 
 jobs:
   build:
@@ -12,9 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: /
+      run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test selenium
-      run: /
         python manage.py test
+    # - name: Test selenium
+    #   run: /
+        
