--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,5 +16,5 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test selenium
-      run: /
+      run: |
         python manage.py test
